fixed slight horizontal scroll

--- a/src/components/About/AboutPage.css
+++ b/src/components/About/AboutPage.css
@@ -5,7 +5,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 .mainContent{
